changed title and put the element as the whole board.

--- a/checkers.html
+++ b/checkers.html
@@ -6,9 +6,11 @@
 <link rel="stylesheet" type="text/css" href="board.css">
 </head>
 <body>
-<h1 style="text-align: center;">Bacon!!!</h1>  
-<div id="board container">
-  <div id="row-1" class="row">
+<h1 style="text-align: center;">Let's Play Checkers!!!</h1>  
+<div id="board container" style="
+display: inline-block;"> 
+==$0 
+  <div id="row-1" class="row"> 
     <div id="cell-1-1" class="cell crimson"></div>
     <div id="cell-1-2" class="cell black" onclick="toggle(this)">
       <div class="checker red-checker"></div>
