--- a/checkers.html
+++ b/checkers.html
@@ -5,12 +5,13 @@
 <title>Game Board</title>
 <link rel="stylesheet" type="text/css" href="board.css">
 </head>
-<body>
-<h1 style="text-align: center;">Let's Play Checkers!!!</h1>  
-<div id="board container" style="
+<body> 
+<div id="board-container" style="
 display: inline-block;"> 
-==$0 
-  <div id="row-1" class="row"> 
+== $0 
+
+<script type="text/javascript" src="template.js"></script> 
+  <div id="row-1" class="row">
     <div id="cell-1-1" class="cell crimson"></div>
     <div id="cell-1-2" class="cell black" onclick="toggle(this)">
       <div class="checker red-checker"></div>
