changed the css

--- a/checkers.html
+++ b/checkers.html
@@ -9,10 +9,12 @@
             crossorigin="anonymous"></script>
 </head>
 <body> 
+<div id="out-of-play-black" class="out-of-play"></div>    
 <div id="board-container" style="
 display: inline-block;"> 
 == $0 </div>
-<script type="text/javascript" src="template2.js"></script>
+<div id="out-of-play-white" class="out-of-play"></div>
+<script type="text/javascript" src="checkers.js"></script>
 <script type="text/javascript" src="board.js"></script>
 </body>
 </html>
